2023-11-20  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Removed unnecessary dependency

2023-11-18  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/ae50bfa2cc569c0f8d5bc4315d39db64005b1b08 ) and raygui ( https://github.com/raysan5/raygui/commit/141ae0cd312656b7764b01079e43fc887aaaf4ce )

2023-11-11  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/shapes_splines_drawing.rb : Added

2023-11-10  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/text_font_sdf.rb : Added

2023-11-09  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/21dc42d2ad02cafed83cd39afd7305212787c114 ) and raygui ( https://github.com/raysan5/raygui/commit/a2726c8600058cf2b1e6a2660d6d26312b0df424 )

2023-10-28  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/b46505b13d4a85e26d1d5b6f9fc2a4264bf8b02f ) and raygui ( https://github.com/raysan5/raygui/commit/499e8bf7b1d9b0a92af8f685e646bc61f13c6dff )
	* examples/core_automation_events.rb : Added

2023-10-08  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Updated with latest raylib ( https://github.com/raysan5/raylib/commit/97c2744a16ad7e6cf6b546a7a6416ec6b21e3a6c ) and raygui ( https://github.com/raysan5/raygui/commit/85a5c104f509b183c8cc7db0d90c2ab7a2b198c8)

2023-09-30  vaiorabbit  <http://twitter.com/vaiorabbit>

	* Use Ruby-FFI 1.16 ( https://github.com/ffi/ffi )

2023-09-23  vaiorabbit  <http://twitter.com/vaiorabbit>

	* examples/raylib_with_imgui.rb : Added

2023-09-16  vaiorabbit  <http://twitter.com/vaiorabbit>

	* lib/raygui_helper.rb: Added more APIs
	* examples/gui_controls.rb: Added
	* examples/shaders_basic_lighting.rb: Added

2023-09-12  vaiorabbit  <http://twitter.com/vaiorabbit>
